# Financial-Golf

./: .gitignore  0001-feat-v5-implementation-of-Consumer-Google-Cookie-Aut.patch  GEMINI.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
go-engine/: go.mod  main.go
python-engine/: main.py
src-tauri/: Cargo.toml  build_error.txt  cargo_err.txt  cargo_error.txt  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.css  index.html  main.js  main.ts
