[package]
name = "financial-golf"
version = "1.0.0"
description = "Financial Golf App"
authors = ["Student"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "7.0"
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
